--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": "14 || 16 || 17 || 18"
   },
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/index.js"
   },
   "repository": {
     "type": "git",
